# fdserver

./: .gitignore  .travis.yml  Makefile  README  README.md  configure.ac
examples/: Makefile  share_pipe_reader.c  share_pipe_run.sh  share_pipe_writer.c
include/: fdserver.h  odp_adapt.h
src/: Makefile.am  fdserver.c  fdserver_common.c  fdserver_lib.c
src/include/: fdserver_common.h  fdserver_internal.h  odp_adapt.h
tests/: Makefile  Makefile.am  fdserver_api.c  run_tests.sh  run_tests_with_path.sh
